# StationViz

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SldFacade.cpp  SldFacade.h  main.cpp
core/: CMakeLists.txt
core/_scl/: CMakeLists.txt  graph.cpp  graph.h  sclManager.h
core/_scl/pugixml/: CMakeLists.txt
core/_scl/sclNodes/: bay.h  scl_common.h  transformerWinding.h
core/scl/: CMakeLists.txt  Internet.h  JsonWriter.cpp  Readme_sclLib.md  Result.h  SclTypes.h  graph.cpp  graph.h  sclManager.cpp  sclManager.h  sclParser.cpp  sclParser.h  station_viz_module_scl_pugixml_architecture_code_cmake_main (1).cpp  test.scd
core/scl/models/: CMakeLists.txt  bay.h  conductingEquipment.h  connectivityNode.h  equipment.h  ied.h  logicalNode.h  powerTransformer.h  terminal.h  voltageLevel.h
core/scl/sclNodes/: ied.h  substation.h
core/sld/: CMakeLists.txt  ICON_NAMING.md  IdFactory.h  JsonWriter.h  README.md  SldBuilder.cpp  SldBuilder.h  SldGraph.h  SldLayout.h  SldManager.cpp  SldManager.h  SldModel.cpp  SldModel.h  SldTypes.h  station_viz_module_sld_backend_architecture_code_cmake_demo (1).cpp
tests/: StructureProjet.txt  deepseek_StructureProjet.txt
ui/: CMakeLists.txt  station_viz_frontend_demo_qt_quick_qml_pour_sld.cpp
ui/qml/: Dashboard.qml  HeaderBar.qml  IconResolver.js  LiveMonitor.qml  LogsReports.qml  Main.qml  NavDrawer.qml  SclExplorer.qml  Settings.qml  SldPage.qml  SldView.qml  TestConsole.qml  Theme.js  qml.qrc
